# notara

./: ## Project Structure.md  .dockerignore  .env.example  .env~  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  OVERVIEW.md  README.md  codian-context-2025-05-07T22-22-43-360Z.xml  codian-context-2025-05-08T03-22-15-137Z.xml  context.md  env-instructions.txt  index.html  package-lock.json  package.json  prompt.md  tailwind.config.ts  vite.config.ts  wrangler.toml
.codex/: AGENTS.md  pollinations-api.json  pollinations.instructions.md
.github/workflows/: windows-installer.yml
.mentat/: format.sh  setup.sh
docker/: server.mjs
docs/: GITHUB_OAUTH_SETUP.md  INTEGRATIONS.md  PHASE_1_SUMMARY.md  PHASE_2_PROGRESS.md  github_integration_triage.md  integration-plan.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/context/: AuthContext.tsx  FileSystemContext.tsx  IntegrationContext.tsx  NotesContext.tsx  NotesContextTypes.tsx  ThemeContext.tsx  TodoContext.tsx  TodoContextTypes.tsx
src/lib/: pollinations.ts  supabase.ts  utils.ts
src/pages/: AiAssistantPage.tsx  AuthCallbackPage.tsx  AuthPage.tsx  CalendarPage.tsx  ConstellationsPage.tsx  GitHubOAuthCallback.tsx  HomePage.tsx  Index.tsx  MarkdownCheatsheetPage.tsx  (+7 more)
website/: astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
wiki/: api-reference.md  architecture.md  project-documentation.md  project-overview.md  usage-examples.md  wiki-metadata.json
(+49 files in other folders)
