[package]
name = "notara"
version = "1.1.0"
description = "Notara desktop application powered by Tauri."
authors = ["Pink Pixel <admin@pinkpixel.dev>"]
license = "Apache-2.0"
repository = "https://github.com/pinkpixel-dev/notara"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "notara_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
